src/assets/stylesheets/pages/landing/projects.less
@import "../../palette";
@import "../../custom";

.projects {
  background: @background-color-primary;
  .default-padding-vertical;

  &-gallery {
    &--item {

      &-name {
        font-size: 45px;
        font-family: "Raleway", sans-serif;
        .default-margin-vertical;

        &, &:hover, &:active, &:visited {
          color: @text-color-tertiary;
        }
      }

      &-description {
        max-width: 900px;
        .default-indentation;
        font-family: 'Open Sans', sans-serif;
        font-size: 16px;
        color: @text-color-secondary;
      }

      &-technology-stack {
        &-label {

        }
      }

      &-responsibilities {
        margin-top: 15px;

        ul {
          list-style: disc;
          margin-left: 65px;
        }

      }

      &-type {
      }

      &-company {
      }

      &-role {
      }
    }
  }

  &-label {
    font-family: "Montserrat", sans-serif;
    font-size: 15px;
    color: @background-color-quaternary;
    .no-margin;
    margin-top: 15px;
    padding: 2px 0;

    span, li {
      font-family: 'Open Sans', sans-serif;
      color: @text-color-secondary;
      margin-left: 4px;
      font-size: 16px;
    }

    &-icon {
      .square(42px);
      text-align: center;
      line-height: 42px;
      vertical-align: middle;
      font-size: 16px;
      margin-right: 5px;
      .rounded;
      background: @background-color-tertiary;
      color: @text-color-quaternary;
    }
  }

  button.slick-arrow {
    .no-padding;
    .no-margin;
    border: none;
    background: @background-color-primary;
    font-size: 20px;
  }
  button.slick-next {
    .default-margin-bottom;
  }

}

@media (max-device-width: 992px) {
  .projects {


    &-gallery {
      &--item {

        &-name {
          font-size: 76px;
        }

        &-description {
          font-size: 46px;
          .default-margin-bottom;
        }

        &-technology-stack {
          .default-padding-top;

          &-label {
            span {
              .block;
            }
          }
        }

        &-responsibilities {
          .default-margin-vertical;
          ul {
            margin-left: 100px;
          }
        }

        &-type {
          .default-margin-vertical;
        }

        &-company {
          .default-margin-vertical;
        }

        &-role {
        }
      }
    }

    &-label {
      font-size: 44px;
      .default-margin-left;

      span, li {
        font-size: 46px;
      }

      &-icon {
        .square(100px);
        line-height: 100px;
        font-size: 50px;
      }
    }

    button.slick-arrow {
      display: none!important;
    }
  }
}

